--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,7 +1,10 @@
 ---
-title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+title: "Nitrogen Deficiency from AUS imagery"
+excerpt: ""
 collection: portfolio
 ---
+* Developed an algorithm to detect the Nitrogen deficiency based on the greenness entropy of corn crop sections
+* Built a back-end prototype API using the developed Nitrogen deficiency detection algorithm
+* Optimized the prototype to generate solutions with a close real-time operation
 
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
+[Link to repo](https://github.com/bridgeag/shinyapps_dev/tree/main/Corn%20MidSeason%20N%20Tool)
